[ACPI] Differentiate between C-States and C-state type.

http://bugzilla.kernel.org/show_bug.cgi?id=1958

Signed-off-by: Bruno Ducrot <ducrot@poupinou.org>
Signed-off-by: Dominik Brodowski <linux@dominikbrodowski.de>
Signed-off-by: Len Brown <len.brown@intel.com>